<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarydark_color"
    android:orientation="vertical"
    tools:context=".ui.createPodcast.CreatePodcastFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/createPodcast"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_container"
        android:backgroundTint="@color/container_background_color"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recording_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="120dp"

            tools:itemCount="3"
            tools:listitem="@layout/item_recording_list" />

        <TextView
            android:id="@+id/text_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/noPodcast"
            android:textColor="@color/primarydark_color"
            android:textSize="16sp"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/no_recording"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_baseline_mic_24"
            android:backgroundTint="@color/primarydark_color"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/button_start_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_mic_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/record"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_folder_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/importFiles"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>