<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.recordPodcast.RecordPodcastFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_baseline_close_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/circle"
                android:text="@string/recording"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_container"
        android:backgroundTint="@color/container_background_color"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/recording_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="120dp"
                android:gravity="center"
                android:orientation="vertical">


                <Chronometer
                    android:id="@+id/recording_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="32sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/button_stop_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/record_button_color"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_close_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/stop"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/save_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">


            <ImageView
                android:id="@+id/button_play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle"
                android:backgroundTint="@color/grey_text_color"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_play_arrow_24" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/btn_undo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle"
                        android:backgroundTint="@color/grey_text_color"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_undo_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/undo"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle"
                        android:backgroundTint="@color/record_button_color"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_mic_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/continueRecording"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/save_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_check_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/save"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>